--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -4,4 +4,4 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "view:stock.shipment.out:"
 msgid "Clear Unassigned Moves"
-msgstr "Esborra moviments no assignats"
+msgstr "Esborra moviments no reservats"
