--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -4,4 +4,4 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "view:stock.shipment.out:"
 msgid "Clear Unassigned Moves"
-msgstr "Borrar movimentos no assignados"
+msgstr "Borrar movimentos no reservados"
