--- a/locale/ca.po
+++ b/locale/ca.po
@@ -6,7 +6,7 @@ msgctxt "model:ir.model.button,string:shipment_out_partial_shipment_button"
 msgid "Partial Shipment"
 msgstr "Enviament parcial"
 
-msgctxt "view:stock.shipment.out:"
+msgctxt "model:ir.model.button,confirm:shipment_out_partial_shipment_button"
 msgid "Are you sure to remove inventory moves that are in draft state?"
 msgstr ""
 "Esteu segur de borrar els moviments d'inventari en estat borrador?"
