--- a/locale/es.po
+++ b/locale/es.po
@@ -6,7 +6,7 @@ msgctxt "model:ir.model.button,string:shipment_out_partial_shipment_button"
 msgid "Partial Shipment"
 msgstr "Envío parcial"
 
-msgctxt "view:stock.shipment.out:"
+msgctxt "model:ir.model.button,confirm:shipment_out_partial_shipment_button"
 msgid "Are you sure to remove inventory moves that are in draft state?"
 msgstr ""
 "¿Está seguro de borrar los movimentos de inventario en estado borrador?"
